5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_1055.log
== TEST (2019-04-09 11:17:38) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

 from math import *
angulo1= randians(angulo);
horizontal=(vo**2*sin(2*angulo1))g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 6
    from math import *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:39) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

 from math import *;
angulo1= randians(angulo);
horizontal=(vo**2*sin(2*angulo1))g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 6
    from math import *;
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:23) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= randians(angulo);
horizontal=(vo**2*sin(2*angulo1))g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 8
    horizontal=(vo**2*sin(2*angulo1))g
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:48) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= randians(angulo);
from math import *
horizontal=(vo**2*sin(2*angulo1))g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    horizontal=(vo**2*sin(2*angulo1))g
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:20:23) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= randians(angulo);
from math import *
horizontal=(vo**2)*sin(2*angulo1))g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    horizontal=(vo**2)*sin(2*angulo1))g
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:06) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= randians(angulo);
from math import *
horizontal=((vo**2)*sin(2*angulo1))/g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    angulo1= randians(angulo);
NameError: name 'randians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:59) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= radians(angulo);
from math import *
horizontal=((vo**2)*sin(2*angulo1))/g

if(abs(distacia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(abs(distacia-horizontal)<=0.1):
NameError: name 'distacia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:22:23) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= radians(angulo);
from math import *
horizontal=((vo**2)*sin(2*angulo1))/g

if(abs(distancia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:22:36) 
-- CODE:
vo=float(input())
angulo=float(input())
g=9.8
distancia=float(input())

from math import *
angulo1= radians(angulo);
from math import *
horizontal=((vo**2)*sin(2*angulo1))/g

if(abs(distancia-horizontal)<=0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.171969
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
